--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<!-- Header section -->
 	<header class="header-section">
-		<a href="home.html">World Runners</a>
+		<a href="home.html"></a>
 		<ul class="main-menu">
 			<li><a class="active" href="index.html">Home</a></li>
 			<li><a href="about.html">Training</a></li>
@@ -77,7 +77,7 @@
 						<div class="ib-icon">
 							<i class="flaticon-004-dumbbell"></i>
 						</div>
-						<h4>Intense Workouts</h4>
+						<h4>Strengthening</h4>
 						<p>Donec nec sapien in urna fermentum ornare. Morbi vel ultrices leo. Sed eu turpis eu arcu vehicula fringilla ut vitae orci. </p>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 						<div class="ib-icon">
 							<i class="flaticon-031-app-1"></i>
 						</div>
-						<h4>Intense Workouts</h4>
+						<h4>Training</h4>
 						<p>Donec nec sapien in urna fermentum ornare. Morbi vel ultrices leo. Sed eu turpis eu arcu vehicula fringilla ut vitae orci. </p>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 						<div class="ib-icon">
 							<i class="flaticon-010-podium"></i>
 						</div>
-						<h4>Intense Workouts</h4>
+						<h4>Stretching</h4>
 						<p>Donec nec sapien in urna fermentum ornare. Morbi vel ultrices leo. Sed eu turpis eu arcu vehicula fringilla ut vitae orci. </p>
 					</div>
 				</div>
